# COinS

./: COinS.cabal  README.md
Data/: COinS.hs
tests/: Tests.hs
