name:                COinS
version:             0.1.0.0
synopsis:            Parse OpenURL Context Objects for journal articles
description:         
 COinS is an encoding of metadata for use in html, also returned from the search.crossref.org API. See the spec at http://ocoins.info/cobg.html for more info.
homepage:            http://github.com/imalsogreg/coins
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          ImAlsoGreg@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.COinS
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7, aeson, bytestring, network, parsec, text
  -- hs-source-dirs:      
  default-language:    Haskell2010